@@ -1,3 +1,6 @@
+2014-01-28  Jean-Louis Martineau <martineau@zmanda.com>
+	* client-src/calcsize.c: Take root privilege to call get_fs_usage.
+
 2014-01-27  Jean-Louis Martineau <martineau@zmanda.com>
 	* perl/Makefile.am: Install Dancer generated file only.
 
